
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;
typedef int uint16_t ;



uint16_t _checksum(uint16_t * addr, int len) {
 int nleft = len;
 int sum = 0;

 uint16_t *w = addr;
 uint16_t answer = 0;

 while(nleft > 1){
  sum += *w++;
  nleft -= sizeof(uint16_t);
 }

 if(nleft == 1){
  *(uint8_t *) (&answer) = *(uint8_t *) w;
  sum += answer;
 }

 sum = (sum >> 16) + (sum & 0xffff);
 sum += (sum >> 16);
 answer = ~sum;

 return (answer);
}
